# workmate_test_task

./: .coverage  .gitignore  README.md  employees1.csv  employees2.csv  main.py  mypy.ini  pyproject.toml
app/: aliases.py  cli.py  file_reader.py  logger.py  registry.py  report.py
data/: employees1.csv  employees2.csv
tests/: test_calc_performance.py  test_calculate_performance.py  test_cli.py  test_file_reader.py
