[project]
name = "workmate-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20241207",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
